src/assets/sass/styles.sass
$primary: #663300
$primary-invert: #fff7ef
$primary-font-size: 24px
$primary-font-size-mobile: 1rem
$title-font-size-mobile: 2rem
$primary-border-radius: 12px
$primary-border-color: 1px solid rgba(0,0,0,.08)
$navbar-dropdown-background-color: $primary
$title-color: #D86c70
$column-gap: 2rem
$family-secondary: 'GT Walsheim Pro', GT Walsheim Pro Ultra, GT Walsheim Pro Cond Ultra, GT Walsheim Pro Condensed, GTWalsheimPro-CondensedULightIt, GT Walsheim Pro Cond, -apple-system, BlinkMacSystemFont,avenir next,avenir,helvetica neue,helvetica,Ubuntu,roboto,noto,segoe ui,arial,sans-serif
$family-primary: 'GT Walsheim Pro', GT Walsheim Pro Ultra, GT Walsheim Pro Cond Ultra, GT Walsheim Pro Condensed, GTWalsheimPro-CondensedULightIt, GT Walsheim Pro Cond, -apple-system,BlinkMacSystemFont,avenir next,avenir,helvetica neue,helvetica,Ubuntu,roboto,noto,segoe ui,arial,sans-serif

@import "~bulma"

html,
body,
#___gatsby,
#gatsby-focus-wrapper,
#layout-wrapper
  scroll-behavior: smooth
  // height: 100%  
  background: $primary-invert !important

h1, h2, h3, h4, h5, h6
  color: $title-color !important

p, li, strong
  font-size: $primary-font-size
  color: $primary

#layout-wrapper
  width: 100%
  display: flex
  flex-direction: column

#content-wrapper
  flex: 1

.video-embed-wrapper
  position: relative
  width: 100%
  padding-top: 56.25%
  iframe
    position: absolute
    top: 0
    left: 0
    width: 100% !important
    height: 100% !important
    border: 0

nav
  background-color: $primary !important
  min-height: 80px !important
  padding-left: 2%
  padding-right: 2%
  box-shadow: 0 2px 0 0 rgba(0,0,0,.24)
  font-size: $primary-font-size
  max-width: 100%
  a.navbar-item, button.navbar-item
    color: #ffe4db !important
    font-size: $primary-font-size
    font-weight: 400
    line-height: 1.5
    padding: 0.5rem 0.75rem
    display: flex
    align-items: center
    &:hover
      color: white !important
      background-color: transparent !important
  button.navbar-item
    background: transparent
    border: none
    cursor: pointer
  .navbar--right--items
    margin-left: 1%
  .navbar-item--active
    color: white !important

.navbar-menu.is-active
  background: $primary !important
  .navbar--right--items
    margin-left: 0
  a.navbar-item, button.navbar-item
    color: #ffe4db !important
    font-size: $primary-font-size
    &:hover
      color: white !important
      background-color: transparent !important
    
#content-wrapper
  margin-top: 80px

.content .taglist
  list-style: none
  margin-bottom: 0
  margin-left: 0
  margin-right: 1.5rem
  margin-top: 1.5rem
  display: flex
  flex-wrap: wrap
  justify-content: left
  align-items: center
  li
    padding: 0 2rem 1rem 0
    margin-bottom: 1.5rem
    margin-top: 0

.margin-top-0
  margin-top: 0 !important

.button
    border-radius: $primary-border-radius !important
.hero
  background-color: $primary-invert
  position: relative
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%23663300' fill-opacity='0.22' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E")
  .title
    letter-spacing: 2px
  .subtitle
    font-size: 32px
    letter-spacing: 2px

.hero__content
  h1, p
    color: $primary-invert !important
  position: absolute
  top: 50%
  left: 50%
  transform: translate(-50%, -50%)
  z-index: 2
  width: 100%
  text-align: center

.hero--summary
  margin-bottom: 30px 

.hero--button__icon
  margin: 5px 0 0 20px 

.hero--image
  position: absolute
  overflow: hidden
  width: 100%
  height: 100%
  img
    width: 100%
    height: 100%
    object-fit: cover

.overlay
  position: absolute
  top: 0
  left: 0
  width: 100%
  height: 100%
  z-index: 1
  opacity: 0.5
  background-color: #3c3a39

.about--section
  min-height: 100vh
  display: flex
  justify-content: center
  align-items: center
  h1, h2, h3, h4, h5
    color: #ffe4db !important
  p, strong, li
    color: $primary-invert !important
  .about--section__content
    background: $title-color
    border-radius: $primary-border-radius

.services--section
  width: 100%
  margin: auto auto !important
  .services--section__item
    padding-left: 0
    padding-right: 0
    img
      width: 100%

.services--section > div
  &:hover
    background: $primary-invert
    box-shadow: 0 0 30px 0 rgba(0,0,0,0.12)
    border-radius: $primary-border-radius

#portfolio .button
  margin-top: 30px

.portfolio--item > section
  padding: 1rem
  cursor: pointer
  box-shadow: 0 5px 10px rgba(0,0,0,.05)
  border-radius: $primary-border-radius
  transition: box-shadow .3s linear
  &:hover
    box-shadow: 0 30px 60px rgba(0,0,0,.1)
 
.portfolio--item__image
  position: relative
  border-radius: $primary-border-radius
  img
    border-radius: $primary-border-radius

.portfolio--item__image--overlay
  border-radius: $primary-border-radius
  background-color: rgba(0, 0, 0, 0.5)
  position: absolute
  width: 100%
  height: 98%
  top: 0
  left: 0 

.portfolio--item__image--play-icon
  position: absolute
  top: 50%
  left: 50%
  transform: translate(-50%, -50%)
  z-index: 2
  background: transparent
  color: #fff
  font-size: 80px

.portfolio--item__video-modal
  position: fixed
  top: 0
  left: 0
  right: 0
  bottom: 0
  z-index: 9999
  background: rgba(0, 0, 0, 0.3)
  display: flex
  align-items: center
  justify-content: center

.portfolio--item__video-modal__content
  max-width: 80%
  line-height: 0
  background: $primary-invert
  border-radius: $primary-border-radius

.posts
  display: grid
  grid-template-columns: auto auto 

.post--card
  margin-right: 40px
  border: $primary-border-color
  border-radius: $primary-border-radius
  padding: 2em 2em
  .post--card__header
    display: grid
    grid-template-columns: 30% 70%
    align-items: center
    div
      margin-right: 20px
      img
        border-radius: $primary-border-radius
  &:hover
    box-shadow: 0 30px 60px rgba(0,0,0,.1)

.contact--form  
  label, input
    color: $primary !important

.mobile--hero
  display: none !important 

footer
  a, p
    color: $primary-invert !important
  a
    margin: 0 10px  


@media screen and (max-width: 1024px)
  body
    overflow-x: hidden

  .desktop--hero
    display: none !important

  .mobile--hero
    display: flex !important
    justify-content: center !important
    text-align: center
    height: 100vh
    .button
      padding-top: 0
      padding-bottom: 0

  .hero--image
    width: 100% !important
    img
      width: 100% 
  

  .posts
    display: grid
    grid-template-columns: auto 

  .post--card
    padding: 1em 1em 
    margin: 0 0 20px 
    .post--card__header
      display: grid
      grid-template-columns: auto

@media screen and (max-width: 500px)
  h1.title.is-size-2
    font-size: 2rem !important

  nav
    min-height: 10px !important
    font-size: $primary-font-size-mobile 

  #content-wrapper
    margin-top: 10px

  .section
    padding: 3rem 1rem !important   

  .content h2
    font-size: 1.25rem !important

  p, li, strong, span
    font-size: $primary-font-size-mobile

  .hero--image
    img
      width: auto  
      height: 100% !important
      max-width: none !important
      
  .hero .subtitle
    font-size: 1rem
    margin: -1em 0 2em !important


  .about--content, .about--section, .portfolio--section, .services--section 
    padding-top: 0 !important
    padding-bottom: 0 !important

  .portfolio--section > .container  > .section
    padding-top: 1rem !important

  .services--section
    .services--section__item
      padding: 0 !important
      display: flex
      flex-direction: column
      align-items: center
      justify-content: center
      text-align: center
      img
        width: 50% 
  #services .button
    font-size: $primary-font-size-mobile !important

@import "~bulma"

